--- a/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
+++ b/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
@@ -1,65 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="doc">
+      <UniqueIdentifier>{148141a5-42f6-4716-b29e-b5fc3e5593ed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{25195dfb-a8b3-4861-89ce-d5e9283a325c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="e4_rk_ha.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\airport.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="airport.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\bus.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="bus.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\clock.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="clock.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\e4_rk_ha.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="generator.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\generator.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="hotel.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\guest.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="passenger.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\hotel.cpp">
+      <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="guest.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\passenger.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="e4_rk_ha.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\airport.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="airport.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\bus.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="bus.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\clock.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="clock.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\e4_rk_ha.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="generator.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\generator.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="hotel.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\guest.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="passenger.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\hotel.h">
+      <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="guest.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="src\passenger.h">
+      <Filter>src</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="doc\zad1.pdf">
+      <Filter>doc</Filter>
+    </None>
   </ItemGroup>
 </Project>
