--- a/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
+++ b/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
@@ -65,7 +65,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="doc\zad1.pdf">
+    <None Include="doc\e4_rk_ha_z2.pdf">
+      <Filter>doc</Filter>
+    </None>
+    <None Include="doc\e4_rk_ha_z1.pdf">
       <Filter>doc</Filter>
     </None>
   </ItemGroup>
