task3 Update Well done, Simulation is working

--- a/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj
+++ b/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="src\passenger.h" />
     <ClInclude Include="src\process.h" />
     <ClInclude Include="src\rangen.h" />
+    <ClInclude Include="src\simulation.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="doc\e4_rk_ha_z1.pdf" />
