--- a/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj
+++ b/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="src\process.h" />
     <ClInclude Include="src\rangen.h" />
     <ClInclude Include="src\simulation.h" />
+    <ClInclude Include="src\students_t_distribution.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="doc\e4_rk_ha_z1.pdf" />
