--- a/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
+++ b/e4_rk_hakowski_adam/e4_rk_ha/e4_rk_ha.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="src\simulation.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\students_t_distribution.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="doxygen.cfg" />
